[project]
name = "finalproject-sofiyskiy-dmitriy-m25-555"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitry Sofiyskiy",email = "sof-85@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry.dependencies]
requests = "^2.32.5"
python-dotenv = "^1.2.1"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 145
target-version = "py312"
exclude = ["venv", ".venv", "dist", "pycache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
rates_ttl_seconds = 600
default_base_currency = "USD"
data_directory = "data"