[tool.poetry]
name = "finalproject_sofiyskiy_dmitriy_M25-555"
version = "0.1.0"
description = ""
authors = ["Dmitry Sofiyskiy <sof-85@mail.ru>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub", from = "." }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 145
target-version = "py312"
exclude = ["venv", ".venv", "dist", "pycache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
rates_ttl_seconds = 600
default_base_currency = "USD"
data_directory = "data"

